# xcpc

./: .gitignore  README.md
docs/resources/: 英语.docx
docs/template/: 2.0.md  2024-8-28 模 203958.md  my_templates.md  ricky_template.md  增量.md
docs/tutorial/: 2025 Winter ACM Tutorial.md
luogu/【LGR-196-Div.4】洛谷入门赛 #26/T497972 相识于 2016/: test1.cpp
luogu/【LGR-196-Div.4】洛谷入门赛 #26/T497973 游戏与共同语言/: test1.cpp
luogu/【LGR-196-Div.4】洛谷入门赛 #26/T497974 皆与生物有缘/: test1.cpp
luogu/【LGR-196-Div.4】洛谷入门赛 #26/T497981 保持连接的方式/: test1.cpp
question-set/HWCWH/: README.md
question-set/HWCWH/H/: test1.cpp
question-set/cp-duels/C.Alternating Subsequence/: ques.md
questions/bin-search/: README.md
questions/bin-search/pku-sequence_partitioning/: test1.cpp
questions/divide-and-conquer/lg-1228/: test1.cpp
questions/graph/lca/: README.md
questions/graph/template/: graph.cpp
questions/trisection/: README.md
src/better-ds/: CMakeLists.txt  cleanup_build.bat  run_test.bat
src/better-ds/include/common/: ExceptionCode.h
src/better-ds/include/core/: BinarySearchTreeNode.h  NullIterator.h
src/better-ds/src/common/: IteratorOutOfBounds.cpp  NoSuchUnitTestException.cpp
src/better-ds/tests/: CMakeLists.txt  test_main.cpp
src/better-utils/: CMakeLists.txt  TODO.txt  build.bat  run_test.bat
src/poj/1011/: test1.cpp
src/test/: test1.c  test1002.cpp  test11.c  test111.c  test111.cpp  test12.c  test12123.c  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test1900.cpp  test2.cpp  test20.cpp  test21.cpp  test22.c  test23.cpp  test25.cpp  test26.cpp  test27.c  test28.c  test29.cpp  test3.cpp  test30.cpp  test31.cpp  test32.cpp  test33.cpp  test34.cpp  test35.cpp  test36.cpp  test37.c  test38.cpp  test39.cpp  test4.cpp  test40.cpp  test41.c  test42.c  (+3 more)
src/topics/: basic_template.cpp
template/: 2024-8-28 模 203958.md
test/: main.cpp  test1.cpp  test10.c  test1000.cpp  test5.cpp
(+666 files in other folders)
